--- a/index.html
+++ b/index.html
@@ -1,2 +1,15 @@
-<link rel="shortcut icon" href="drone-logo.jpg" type="x-icon" />
- 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Drone Website</title>
+
+    <link rel="stylesheet" href="style.css">
+    <link rel="shortcut icon" href="drone-logo.jpg" type="x-icon" />
+
+</head>
+<body>
+    
+</body>
+</html>
