--- a/html-files/index.html
+++ b/html-files/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Drone Website</title>
 
-    <link rel="stylesheet" href="style.css">
-    <link rel="shortcut icon" href="drone-logo.jpg" type="x-icon" />
+    <link rel="stylesheet" href="styling-files/styles.css">
+    <link rel="shortcut icon" href="img/drone-logo.jpg" type="x-icon" />
 
 </head>
 <body>
