--- a/html-files/index.html
+++ b/html-files/index.html
@@ -6,7 +6,7 @@
     <title>Drone Website</title>
 
     <link rel="stylesheet" href="styling-files/styles.css">
-    <link rel="shortcut icon" href="img/drone-logo.jpg" type="x-icon" />
+    <link rel="shortcut icon" href="/img/drone-logo.jpg" type="x-icon" />
 
 </head>
 <body>
