--- a/html-files/index.html
+++ b/html-files/index.html
@@ -14,8 +14,8 @@
     
     <div class="testing">test text part 2</div>
     afasfagsg fdfsdgfdfsf
-    vsrhetrgrgrdgrrg
-    ggehgsfgrh
+    vsrhetrgrgrdgrrggdhth
+    ggehgsfgrhddgrg
     ehrhythggnfhmgffs
     yjrj
 </body>
